# taskclf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLAN.md  README.md  TEST_PLAN.md  TODO_AWARE_UTC_MIGRATION.md  TODO_DOCS.md  TODO_DYNAMIC_MODEL_MENU.md  TODO_GLOBAL_PATHS.md  TODO_INFERENCE_QUALITY.md  TODO_LABELLING.md  TODO_MODEL_SELECTION.md  TODO_ONTOLOGY.md  TODO_REPORT_ERR.md  TODO_TEST.md  TODO_TRAY.md  TODO_TRAY_MENU.md  mkdocs.yml  nuitka-crash-report.xml  package-lock.json  pyproject.toml
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  electron-release.yml  payload-release.yml  publish.yml
artifacts/: README.md
configs/: README.md  config.yml  inference_policy.template.json  retrain.yaml  user_config.template.toml  user_taxonomy_example.yaml
data/: README.md
docs/: index.md  labels_v2.md  labels_v2_migration_plan.md
docs/api/: model_inspection.md  model_registry.md
docs/api/adapters/: activitywatch.md
docs/api/cli/: main.md
docs/api/core/: config.md  crash.md  defaults.md  diagnostics.md  drift.md  hashing.md  inference_policy.md  logging.md  metrics.md  model_io.md  paths.md  schema.md  store.md  telemetry.md  time.md  types.md  validation.md
docs/api/features/: build.md  domain.md  dynamics.md  sessions.md  text.md  windows.md
docs/api/infer/: aggregation.md  baseline.md  batch.md  calibration.md  feature_state.md  monitor.md  online.md  prediction.md  resolve.md  smooth.md  taxonomy.md
docs/api/labels/: projection.md  queue.md  store.md  weak_rules.md
docs/api/report/: daily.md  export.md
docs/api/scripts/: payload_build.md  payload_index.md
docs/api/train/: build_dataset.md  calibrate.md  dataset.md  evaluate.md  lgbm.md  retrain.md
docs/api/ui/: activity_provider.md  copy.md  electron_node_http.md  electron_payload_choice.md  electron_port_conflict.md  electron_shell.md  electron_tray_dashboard.md  electron_tray_icon.md  electron_update_policy.md  error_banner.md  events.md  frontend_date.md  host_window_drag_strip.md  labeling.md  runtime.md  shell_warm.md  training.md  window.md
docs/guide/: acceptance.md  config_template.md  inference_contract.md  inference_policy_template.md  labels_v1.md  labels_v2_playbook.md  labels_v2_spec.md  metrics_contract.md  model_bundle_layout.md  model_io.md  model_selection.md  personalization.md  privacy.md  splits.md  taxonomy.md  time_spec.md  usage.md
electron/: launcher_choice.test.js  launcher_choice.ts  main.ts  manual_update.test.js  manual_update.ts  node_http.test.js  node_http.ts  package.json  payload_choice.test.js  payload_choice.ts  payload_chooser_preload.ts  pnpm-lock.yaml  port_conflict.test.js  port_conflict.ts  preload.ts  shell_warm.test.js  shell_warm.ts  tray_dashboard.test.js  tray_dashboard.ts  tray_icon.test.js  tray_icon.ts  tsconfig.json  update_chooser_preload.ts  update_policy.test.js  update_policy.ts  updater.ts
electron/scripts/: build-icon.js
homebrew-tap/Formula/: taskclf.rb
models/: README.md
schema/: features_v1.json  labels_v1.json  labels_v2.json
scripts/: README.md  generate_model_fixtures.py  host_target_triple.py  payload_build.py  payload_index.py  tune_lgbm.py
src/: README.md
src/taskclf/: README.md  __init__.py  model_inspection.py  model_registry.py
src/taskclf/adapters/: README.md
src/taskclf/cli/: README.md  entry.py  main.py  migrate_labels.py
src/taskclf/core/: README.md  _toml_write.py  config.py  crash.py  defaults.py  diagnostics.py  drift.py  hashing.py  inference_policy.py  logging.py  metrics.py  model_io.py  paths.py  schema.py  store.py  telemetry.py  time.py  types.py  validation.py
src/taskclf/features/: README.md  build.py  domain.py  dynamics.py  sessions.py  text.py  windows.py
src/taskclf/infer/: README.md  aggregation.py  baseline.py  batch.py  calibration.py  decision.py  feature_state.py  monitor.py  online.py  (+4 more)
tests/: conftest.py  test_adapters_aw.py  test_aw_input_events.py  test_calibration.py  test_cli_commands.py  test_cli_entry.py  test_cli_main.py  test_cli_model_inspect.py  test_cli_model_set_active.py  test_cli_train_list.py  test_core_config.py  test_core_crash.py  test_core_defaults.py  test_core_hashing.py  test_core_inference_policy.py  test_core_logging.py  test_core_metrics.py  test_core_model_io.py  test_core_paths.py  test_core_schema.py  test_core_store.py  test_core_telemetry.py  test_core_time.py  test_core_types.py  test_core_validation.py  test_drift.py  test_features_build.py  test_features_domain.py  test_features_dynamics.py  test_features_from_aw.py  test_features_sessions.py  test_features_text.py  test_features_windows.py  test_infer_aggregation.py  test_infer_baseline.py  test_infer_batch_reject.py  test_infer_batch_segments.py  test_infer_calibration.py  test_infer_monitor.py  test_infer_online.py  (+46 more)
(+138 files in other folders)
