[project]
name = "taskclf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fruitiecutiepie", email = "104437268+fruitiecutiepie@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
    "scipy>=1.15.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "typer>=0.23.1",
    "pyyaml>=6.0",
]

[project.scripts]
taskclf = "taskclf.cli.main:app"

[tool.uv]
override-dependencies = [
    "pandas>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]
