[project]
name = "taskclf"
version = "0.1.0"
description = "Local-first task classifier that infers your work type from computer activity signals"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "fruitiecutiepie", email = "104437268+fruitiecutiepie@users.noreply.github.com" }
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.115.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
    "scipy>=1.15.0",
    "scikit-learn>=1.8.0",
    "pywebview>=5.0",
    "typer>=0.23.1",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
    "pystray>=0.19.5",
    "Pillow>=11.0.0",
    "plyer>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/fruitiecutiepie/taskclf"
Documentation = "https://fruitiecutiepie.github.io/taskclf"
Repository = "https://github.com/fruitiecutiepie/taskclf"

[project.scripts]
taskclf = "taskclf.cli.main:app"

[tool.uv_build]
data-includes = ["src/taskclf/ui/static/**/*"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.0",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]
